--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.8.0",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
