--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "react-particles": "^2.9.3",
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
