--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
     "styled-jsx-plugin-postcss": "^4.0.1",
+    "tailwindcss-animated": "^1.0.0",
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
