--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
     "styled-jsx-plugin-postcss": "^4.0.1",
@@ -29,6 +30,7 @@
     "@next/bundle-analyzer": "^12.0.9",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@types/react-html-parser": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
