--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
             "singleQuote": true
           }
         ],
+        "consistent-return": "off",
         "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
         "jsx-a11y/anchor-is-valid": "off", // Next.js use his own internal link system
         "react/require-default-props": "off", // Allow non-defined react props as undefined
