--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
