--- a/.eslintrc
+++ b/.eslintrc
@@ -48,7 +48,8 @@
         "unused-imports/no-unused-vars": [
           "warn",
           { "argsIgnorePattern": "^_" }
-        ]
+        ],
+        "@typescript-eslint/no-unused-expressions": "warn"
       }
     }
   ]
