--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.0.7",
+    "@tanstack/react-query": "^4.32.0",
     "classnames": "^2.3.1",
     "merkletreejs": "^0.3.10",
     "next": "^12.0.9",
