--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tls": false
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@tanstack/react-query": "^4.32.0",
     "classnames": "^2.3.1",
