--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "next": "^13.5.3",
     "next-seo": "^4.29.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-parallax-mouse": "^2.0.1",
+    "react-scroll-parallax": "^3.4.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "tailwindcss-animated": "^1.0.0",
     "tsparticles": "^2.9.3",
