--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,10 @@
           { "argsIgnorePattern": "^_" }
         ],
         "no-nested-ternary": "off",
-        "@typescript-eslint/no-unused-expressions": "warn"
+        "@typescript-eslint/no-unused-expressions": "warn",
+        "import/no-cycle": "off",
+        "prefer-destructuring": "off",
+        "no-return-assign": "off"
       }
     }
   ]
