--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "tls": false
   },
   "dependencies": {
+    "@apollo/client": "^3.8.4",
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@tanstack/react-query": "^4.32.0",
     "classnames": "^2.3.1",
+    "ethers": "^6.7.1",
+    "graphql": "^16.8.1",
     "merkletreejs": "^0.3.10",
     "next": "^13.5.3",
     "next-seo": "^4.29.0",
