--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "merkletreejs": "^0.3.10",
     "next": "^13.5.3",
     "next-seo": "^4.29.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-parallax-mouse": "^2.0.1",
     "react-scroll-parallax": "^3.4.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
@@ -51,6 +53,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-html-parser": "^2.0.2",
+    "@types/react-lottie": "^1.2.7",
     "@types/styled-jsx": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
