--- a/.eslintrc
+++ b/.eslintrc
@@ -53,7 +53,8 @@
         "@typescript-eslint/no-unused-expressions": "warn",
         "import/no-cycle": "off",
         "prefer-destructuring": "off",
-        "no-return-assign": "off"
+        "no-return-assign": "off",
+        "no-restricted-syntax": "warn"
       }
     }
   ]
