--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@tanstack/react-query": "^4.32.0",
+    "@types/lodash.merge": "^4.6.7",
+    "alchemy-sdk": "^2.10.1",
     "classnames": "^2.3.1",
     "ethers": "^6.7.1",
     "graphql": "^16.8.1",
+    "lodash.merge": "^4.6.2",
     "merkletreejs": "^0.3.10",
     "next": "^13.5.3",
     "next-seo": "^4.29.0",
