--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "NEXT_PUBLIC_NETWORK=mainnet NEXT_PUBLIC_DEV=1 next dev",
     "dev:sepolia": "NEXT_PUBLIC_NETWORK=sepolia NEXT_PUBLIC_DEV=1 next dev",
     "dev:local": "NEXT_PUBLIC_NETWORK=localhost NEXT_PUBLIC_DEV=1 next dev",
+    "dev:hardhat": "NEXT_PUBLIC_NETWORK=hardhat NEXT_PUBLIC_DEV=1 next dev",
     "build": "next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
