--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "pintswap-landing",
   "version": "1.0.0",
   "scripts": {
-    "dev": "NEXT_PUBLIC_NETWORK=mainnet NEXT_PUBLIC_DEV=1 next dev",
-    "dev:sepolia": "NEXT_PUBLIC_NETWORK=sepolia NEXT_PUBLIC_DEV=1 next dev",
+    "dev": "NEXT_PUBLIC_CHAINID=1 NEXT_PUBLIC_NETWORK=mainnet NEXT_PUBLIC_DEV=1 next dev",
+    "dev:sepolia": "NEXT_PUBLIC_CHAINID=11155111 NEXT_PUBLIC_NETWORK=sepolia NEXT_PUBLIC_DEV=1 next dev",
     "dev:local": "NEXT_PUBLIC_NETWORK=localhost NEXT_PUBLIC_DEV=1 next dev",
     "dev:hardhat": "NEXT_PUBLIC_NETWORK=hardhat NEXT_PUBLIC_DEV=1 next dev",
     "build": "next build",
